--- a/res/values/roboguice.xml
+++ b/res/values/roboguice.xml
@@ -3,10 +3,10 @@
 	<string-array name="roboguice_modules">
 		<item>net.sf.briar.android.AndroidModule</item>
 		<item>net.sf.briar.android.helloworld.HelloWorldModule</item>
-		<item>net.sf.briar.android.invitation.AndroidInvitationModule</item>
 		<item>net.sf.briar.clock.ClockModule</item>
 		<item>net.sf.briar.crypto.CryptoModule</item>
 		<item>net.sf.briar.db.DatabaseModule</item>
+		<item>net.sf.briar.invitation.InvitationModule</item>
 		<item>net.sf.briar.lifecycle.LifecycleModule</item>
 		<item>net.sf.briar.plugins.PluginsModule</item>
 		<item>net.sf.briar.protocol.ProtocolModule</item>
