Hooked up star/unstar and read/unread buttons. Tinkered with layouts.

--- a/briar-android/res/values-v11/styles.xml
+++ b/briar-android/res/values-v11/styles.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<style name="LightTheme" parent="android:Theme.Holo.Light" />
+	<style name="LightThemeNoActionBar"
+	    parent="android:Theme.Holo.Light.NoActionBar" />
 </resources>
