--- a/briar-android/res/values/color.xml
+++ b/briar-android/res/values/color.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="ButtonBarBorder">#CCCCCC</color>
+	<color name="HorizontalBorder">#CCCCCC</color>
 </resources>
