Android UI for group messages (anonymous text only, no moderation yet).

--- a/briar-android/res/values/color.xml
+++ b/briar-android/res/values/color.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="HorizontalBorder">#CCCCCC</color>
+	<color name="horizontal_border">#CCCCCC</color>
+	<color name="anonymous_author">#999999</color>
+	<color name="pseudonymous_author">#000000</color>
 </resources>
