Minor layout and colour changes.

--- a/briar-android/res/values/color.xml
+++ b/briar-android/res/values/color.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="content_background">#FFFFFF</color>
+    <color name="unread_background">#FFFFFF</color>
 	<color name="horizontal_border">#CCCCCC</color>
-	<color name="anonymous_author">#999999</color>
+	<color name="anonymous_author">#AAAAAA</color>
 	<color name="pseudonymous_author">#000000</color>
 </resources>
