Create an identity at startup if the database doesn't exist.

--- a/briar-android/res/values-v11/styles.xml
+++ b/briar-android/res/values-v11/styles.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<style name="LightTheme" parent="android:Theme.Holo.Light" />
+	<integer name="horizontal_border_width">5</integer>
+	<integer name="spinner_padding">10</integer>
 </resources>
