--- a/briar-android/res/values/styles.xml
+++ b/briar-android/res/values/styles.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<style name="LightTheme" parent="android:Theme.Light" />
+	<integer name="horizontal_border_width">2</integer>
+	<integer name="spinner_padding">0</integer>
 </resources>
