Improved ConversationActivity (bug #32), but it's still not quite there.
GroupActivity needs to receive a similar treatment.

--- a/briar-android/res/values/color.xml
+++ b/briar-android/res/values/color.xml
@@ -3,6 +3,7 @@
     <color name="home_screen_background">#FFFFFF</color>
     <color name="content_background">#FFFFFF</color>
     <color name="unread_background">#FFFFFF</color>
+    <color name="read_background">#EEEEEE</color>
 	<color name="horizontal_border">#CCCCCC</color>
 	<color name="no_posts">#AAAAAA</color>
 	<color name="no_messages">#AAAAAA</color>
