Speech bubble layout for private conversations.

--- a/briar-android/res/values/color.xml
+++ b/briar-android/res/values/color.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="home_screen_background">#FFFFFF</color>
     <color name="content_background">#FFFFFF</color>
+    <color name="conversation_background">#DDDDDD</color>
     <color name="unread_background">#FFFFFF</color>
     <color name="read_background">#EEEEEE</color>
 	<color name="horizontal_border">#CCCCCC</color>
