Prettier display of available forums, cleaned up list comparators.

--- a/briar-android/res/values/color.xml
+++ b/briar-android/res/values/color.xml
@@ -7,5 +7,6 @@
 	<color name="private_message_date">#AAAAAA</color>
     <color name="unread_background">#FFFFFF</color>
 	<color name="horizontal_border">#CCCCCC</color>
+	<color name="groups_available_background">#FCCF1C</color>
 	<color name="no_posts">#AAAAAA</color>
 </resources>
