--- a/briar-android/res/values/color.xml
+++ b/briar-android/res/values/color.xml
@@ -4,6 +4,7 @@
     <color name="action_bar_text">#FFFFFF</color>
     <color name="action_bar_background">#2D3E50</color>
     <color name="button_bar_background">#FFFFFF</color>
+    <color name="dashboard_background">#FFFFFF</color>
     <color name="private_message_background">#FFFFFF</color>
 	<color name="private_message_date">#AAAAAA</color>
     <color name="unread_background">#FFFFFF</color>
