--- a/briar-android/res/values/color.xml
+++ b/briar-android/res/values/color.xml
@@ -11,4 +11,6 @@
 	<color name="horizontal_border">#CCCCCC</color>
 	<color name="groups_available_background">#FCCF1C</color>
 	<color name="no_posts">#AAAAAA</color>
+	<color name="settings_title_text">#2D3E50</color>
+	<color name="settings_title_underline">#2D3E50</color>
 </resources>
