--- a/briar-android/res/values/color.xml
+++ b/briar-android/res/values/color.xml
@@ -10,6 +10,7 @@
     <color name="unread_background">#FFFFFF</color>
 	<color name="horizontal_border">#CCCCCC</color>
 	<color name="groups_available_background">#FCCF1C</color>
+	<color name="no_private_messages">#AAAAAA</color>
 	<color name="no_posts">#AAAAAA</color>
 	<color name="settings_title_text">#2D3E50</color>
 	<color name="settings_title_underline">#2D3E50</color>
