Renamed SerialModule, fixed Roboguice module list.

--- a/briar-android/res/values/roboguice.xml
+++ b/briar-android/res/values/roboguice.xml
@@ -3,13 +3,13 @@
 	<string-array name="roboguice_modules">
 		<item>org.briarproject.android.AndroidModule</item>
 		<item>org.briarproject.crypto.CryptoModule</item>
+		<item>org.briarproject.data.DataModule</item>
 		<item>org.briarproject.db.DatabaseModule</item>
 		<item>org.briarproject.event.EventModule</item>
 		<item>org.briarproject.invitation.InvitationModule</item>
 		<item>org.briarproject.lifecycle.LifecycleModule</item>
 		<item>org.briarproject.messaging.MessagingModule</item>
 		<item>org.briarproject.plugins.AndroidPluginsModule</item>
-		<item>org.briarproject.serial.SerialModule</item>
 		<item>org.briarproject.system.AndroidSystemModule</item>
 		<item>org.briarproject.transport.TransportModule</item>
 	</string-array>
