--- a/briar-android/res/values-v14/styles.xml
+++ b/briar-android/res/values-v14/styles.xml
@@ -9,4 +9,9 @@
         <item name="android:textColor">@color/action_bar_text</item>
         <item name="android:background">@color/action_bar_background</item>
     </style>
+
+    <style name="BriarButton.Default">
+        <item name="android:textAllCaps">true</item>
+    </style>
+
 </resources>
