--- a/briar-android/res/layout/activity_password.xml
+++ b/briar-android/res/layout/activity_password.xml
@@ -43,10 +43,12 @@
         style="?android:attr/progressBarStyleInverse"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/btn_sign_in"
-        android:visibility="invisible" />
+        android:layout_below="@id/edit_password"
+        android:layout_marginTop="@dimen/margin_xlarge"
+        android:visibility="gone" />
 
     <TextView
+        android:id="@+id/forgot_password"
         style="@style/BriarTextBody"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
