Added paddingLeft/Right for older devices.

--- a/briar-android/res/layout/activity_password.xml
+++ b/briar-android/res/layout/activity_password.xml
@@ -5,7 +5,9 @@
     android:orientation="vertical"
     android:paddingBottom="@dimen/margin_activity_vertical"
     android:paddingEnd="@dimen/margin_activity_horizontal"
+    android:paddingRight="@dimen/margin_activity_horizontal"
     android:paddingStart="@dimen/margin_activity_horizontal"
+    android:paddingLeft="@dimen/margin_activity_horizontal"
     android:paddingTop="@dimen/margin_activity_vertical">
 
     <TextView
