Don't stretch progress wheel on Android 2.3.

--- a/briar-android/res/layout/activity_password.xml
+++ b/briar-android/res/layout/activity_password.xml
@@ -43,10 +43,11 @@
     <ProgressBar
         android:id="@+id/progress_wheel"
         style="?android:attr/progressBarStyleInverse"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/btn_sign_in"
         android:layout_alignBottom="@id/btn_sign_in"
+        android:layout_centerHorizontal="true"
         android:gravity="center"
         android:visibility="invisible" />
 
