--- a/briar-android/res/layout/list_item_transport.xml
+++ b/briar-android/res/layout/list_item_transport.xml
@@ -2,7 +2,7 @@
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:orientation="horizontal"
+	android:orientation="vertical"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:padding="@dimen/margin_small"
@@ -19,7 +19,6 @@
 		android:id="@+id/textView"
 		android:layout_width="wrap_content"
 		android:layout_height="match_parent"
-		android:gravity="center_vertical"
 		android:padding="@dimen/margin_small"
 		android:textColor="@android:color/tertiary_text_light"
 		tools:text="@string/transport_tor"/>
