--- a/briar-android/res/layout/transports_list.xml
+++ b/briar-android/res/layout/transports_list.xml
@@ -2,7 +2,7 @@
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical"
-	android:layout_width="wrap_content"
+	android:layout_width="match_parent"
 	android:layout_height="wrap_content">
 
 	<View
@@ -12,7 +12,7 @@
 
 	<GridView
 		android:id="@+id/transportsView"
-		android:layout_width="wrap_content"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:padding="@dimen/margin_medium"
 		android:numColumns="3"/>
