Small Improvements for Crash Handling Activities

--- a/briar-android/res/layout/activity_startup_failure.xml
+++ b/briar-android/res/layout/activity_startup_failure.xml
@@ -4,13 +4,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="7dp">
+    android:padding="@dimen/margin_activity_horizontal">
 
     <TextView
         android:id="@+id/headlineView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        style="@style/BriarTextTitle"
         android:text="@string/startup_failed_notification_title"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="7dp"
