Use a RecyclerView for the Contact List

--- a/briar-android/res/layout/transports_list.xml
+++ b/briar-android/res/layout/transports_list.xml
@@ -5,10 +5,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content">
 
-	<View
-		android:layout_width="match_parent"
-		android:layout_height="1px"
-		android:background="@color/horizontal_border"/>
+	<View style="@style/Divider.Horizontal"/>
 
 	<GridView
 		android:id="@+id/transportsView"
