--- a/briar-android/res/layout/activity_setup.xml
+++ b/briar-android/res/layout/activity_setup.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
@@ -23,12 +24,19 @@
 			android:text="@string/choose_nickname"
 			android:textSize="18sp"/>
 
-		<EditText
-			android:id="@+id/nickname_entry"
+		<android.support.design.widget.TextInputLayout
+			android:id="@+id/nickname_entry_wrapper"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:inputType="text|textCapWords"
-			android:maxLines="1"/>
+			app:errorEnabled="true">
+
+			<EditText
+				android:id="@+id/nickname_entry"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:inputType="text|textCapWords"
+				android:maxLines="1"/>
+		</android.support.design.widget.TextInputLayout>
 
 		<TextView
 			android:layout_width="wrap_content"
@@ -37,12 +45,19 @@
 			android:text="@string/choose_password"
 			android:textSize="18sp"/>
 
-		<EditText
-			android:id="@+id/password_entry"
+		<android.support.design.widget.TextInputLayout
+			android:id="@+id/password_entry_wrapper"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:inputType="textPassword"
-			android:maxLines="1"/>
+			app:errorEnabled="true">
+
+			<EditText
+				android:id="@+id/password_entry"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:inputType="textPassword"
+				android:maxLines="1"/>
+		</android.support.design.widget.TextInputLayout>
 
 		<TextView
 			android:layout_width="wrap_content"
@@ -51,12 +66,19 @@
 			android:text="@string/confirm_password"
 			android:textSize="18sp"/>
 
-		<EditText
-			android:id="@+id/password_confirm"
+		<android.support.design.widget.TextInputLayout
+			android:id="@+id/password_confirm_wrapper"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:inputType="textPassword"
-			android:maxLines="1"/>
+			app:errorEnabled="true">
+
+			<EditText
+				android:id="@+id/password_confirm"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:inputType="textPassword"
+				android:maxLines="1"/>
+		</android.support.design.widget.TextInputLayout>
 
 		<org.briarproject.android.util.StrengthMeter
 			android:id="@+id/strength_meter"
