--- a/briar-android/res/layout/activity_contact_list.xml
+++ b/briar-android/res/layout/activity_contact_list.xml
@@ -1,18 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="vertical"
 	android:gravity="center">
 
-	<android.support.v7.widget.RecyclerView
-		android:id="@+id/contactList"
-		android:scrollbars="vertical"
+	<android.support.design.widget.CoordinatorLayout
+		android:id="@+id/coordinatorLayout"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		tools:listitem="@layout/list_item_contact"/>
+		android:layout_height="match_parent">
+
+		<android.support.v7.widget.RecyclerView
+			android:id="@+id/contactList"
+			android:scrollbars="vertical"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			tools:listitem="@layout/list_item_contact"/>
+
+		<android.support.design.widget.FloatingActionButton
+			android:id="@+id/addContactFAB"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="bottom|end"
+			android:layout_margin="@dimen/margin_activity_horizontal"
+			android:src="@drawable/ic_add_white"
+			app:fabSize="normal"
+			app:elevation="4dp"
+			app:layout_anchor="@id/contactList"
+			app:layout_anchorGravity="bottom|right|end"
+			app:layout_behavior="org.briarproject.android.util.HideFabOnScrollBehavior"/>
+
+	</android.support.design.widget.CoordinatorLayout>
 
 	<ProgressBar
 		android:id="@+id/progressBar"
