--- a/briar-android/res/layout/activity_contact_list.xml
+++ b/briar-android/res/layout/activity_contact_list.xml
@@ -1,54 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
+	android:id="@+id/coordinatorLayout"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:orientation="vertical"
-	android:gravity="center">
+	android:layout_height="match_parent">
 
-	<android.support.design.widget.CoordinatorLayout
-		android:id="@+id/coordinatorLayout"
+	<org.briarproject.android.util.BriarRecyclerView
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		android:id="@+id/contactList"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent">
+		android:layout_height="match_parent"/>
 
-		<android.support.v7.widget.RecyclerView
-			android:id="@+id/contactList"
-			android:scrollbars="vertical"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			tools:listitem="@layout/list_item_contact"/>
-
-		<android.support.design.widget.FloatingActionButton
-			android:id="@+id/addContactFAB"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_gravity="bottom|end"
-			android:layout_margin="@dimen/margin_activity_horizontal"
-			android:src="@drawable/ic_add_white"
-			app:fabSize="normal"
-			app:elevation="4dp"
-			app:layout_anchor="@id/contactList"
-			app:layout_anchorGravity="bottom|right|end"
-			app:layout_behavior="org.briarproject.android.util.HideFabOnScrollBehavior"/>
-
-	</android.support.design.widget.CoordinatorLayout>
-
-	<ProgressBar
-		android:id="@+id/progressBar"
-		style="?android:attr/progressBarStyleLarge"
+	<android.support.design.widget.FloatingActionButton
+		android:id="@+id/addContactFAB"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:indeterminate="true"
-		android:visibility="gone"/>
+		android:layout_gravity="bottom|end"
+		android:layout_margin="@dimen/margin_activity_horizontal"
+		android:src="@drawable/ic_add_white"
+		app:fabSize="normal"
+		app:elevation="4dp"
+		app:layout_anchor="@id/contactList"
+		app:layout_anchorGravity="bottom|right|end"
+		app:layout_behavior="org.briarproject.android.util.HideFabOnScrollBehavior"/>
 
-	<TextView
-		android:id="@+id/emptyView"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:textSize="@dimen/text_size_large"
-		android:text="@string/no_contacts"
-		android:visibility="gone"/>
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
