--- a/briar-android/res/layout/activity_password.xml
+++ b/briar-android/res/layout/activity_password.xml
@@ -1,65 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/margin_activity_vertical"
-    android:paddingEnd="@dimen/margin_activity_horizontal"
-    android:paddingRight="@dimen/margin_activity_horizontal"
-    android:paddingStart="@dimen/margin_activity_horizontal"
-    android:paddingLeft="@dimen/margin_activity_horizontal"
-    android:paddingTop="@dimen/margin_activity_vertical">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/title_password"
-        style="@style/BriarTextTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:padding="@dimen/margin_large"
-        android:text="@string/enter_password" />
-
-    <EditText
-        android:id="@+id/edit_password"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/title_password"
-        android:hint="@string/password_hint"
-        android:imeOptions="actionDone"
-        android:inputType="textPassword"
-        android:maxLines="1" />
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/margin_activity_vertical"
+        android:paddingEnd="@dimen/margin_activity_horizontal"
+        android:paddingRight="@dimen/margin_activity_horizontal"
+        android:paddingStart="@dimen/margin_activity_horizontal"
+        android:paddingLeft="@dimen/margin_activity_horizontal"
+        android:paddingTop="@dimen/margin_activity_vertical">
 
-    <Button
-        android:id="@+id/btn_sign_in"
-        style="@style/BriarButton.Default"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/edit_password"
-        android:layout_marginTop="@dimen/margin_xlarge"
-        android:onClick="onSignInClick"
-        android:text="@string/sign_in_button" />
+	    <TextView
+		    android:id="@+id/title_password"
+		    style="@style/BriarTextTitle"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_centerHorizontal="true"
+		    android:padding="@dimen/margin_large"
+		    android:text="@string/enter_password" />
 
-    <ProgressBar
-        android:id="@+id/progress_wheel"
-        style="?android:attr/progressBarStyleInverse"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@id/btn_sign_in"
-        android:layout_alignBottom="@id/btn_sign_in"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:visibility="invisible" />
+	    <android.support.design.widget.TextInputLayout
+		    android:id="@+id/password_layout"
+		    android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+		    android:layout_centerHorizontal="true"
+		    android:layout_below="@id/title_password"
+			app:errorEnabled="true">
 
-    <TextView
-        style="@style/BriarTextBody"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btn_sign_in"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/margin_large"
-        android:clickable="true"
-        android:onClick="onForgottenPasswordClick"
-        android:text="@string/forgotten_password"
-        android:textColor="?android:attr/textColorLink" />
+		    <EditText
+			    android:id="@+id/edit_password"
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    android:imeOptions="actionDone"
+			    android:inputType="textPassword"
+			    android:maxLines="1" />
 
-</RelativeLayout>
+	    </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/btn_sign_in"
+            style="@style/BriarButton.Default"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/password_layout"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:onClick="onSignInClick"
+            android:text="@string/sign_in_button" />
+
+        <ProgressBar
+            android:id="@+id/progress_wheel"
+            style="?android:attr/progressBarStyleInverse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/btn_sign_in"
+            android:layout_alignBottom="@id/btn_sign_in"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:visibility="invisible" />
+
+        <TextView
+            style="@style/BriarTextBody"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btn_sign_in"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/margin_large"
+            android:clickable="true"
+            android:onClick="onForgottenPasswordClick"
+            android:text="@string/forgotten_password"
+            android:textColor="?android:attr/textColorLink" />
+
+    </RelativeLayout>
+
+</ScrollView>
