--- a/briar-android/res/values/styles.xml
+++ b/briar-android/res/values/styles.xml
@@ -12,6 +12,36 @@
         <item name="android:textColorLink">@color/briar_text_link</item>
     </style>
 
+    <style name="BriarThemeNoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="toolbarStyle">@style/BriarToolbar</item>
+        <item name="colorPrimary">@color/briar_primary</item>
+        <item name="colorPrimaryDark">@color/briar_primary_dark</item>
+        <item name="colorAccent">@color/briar_primary</item>
+        <item name="android:textColorPrimary">@color/briar_text_primary</item>
+        <item name="android:textColorPrimaryInverse">@color/briar_text_primary_inverse</item>
+        <item name="android:textColorSecondary">@color/briar_text_primary</item>
+        <item name="android:textColorLink">@color/briar_text_link</item>
+    </style>
+
+    <style name="BriarThemeNoActionBar.Default" />
+
+    <style name="BriarToolbar" parent="Widget.AppCompat.Toolbar">
+        <item name="android:background">?colorPrimary</item>
+        <item name="android:textColorPrimary">@color/briar_text_primary_inverse</item>
+        <item name="android:textSize">@dimen/text_size_medium</item>
+        <item name="colorPrimary">@color/briar_primary</item>
+        <item name="titleTextAppearance">@style/BriarToolbarTextAppearance</item>
+        <item name="android:theme">@style/BriarToolbarTheme</item>
+    </style>
+
+    <style name="BriarToolbarTheme">
+        <item name="colorControlNormal">@color/briar_text_primary_inverse</item>
+    </style>
+
+    <style name="BriarToolbarTextAppearance" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textColor">@color/briar_text_primary_inverse</item>
+    </style>
+
     <style name="BriarTheme" parent="BriarBaseTheme">
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
         <item name="android:listSeparatorTextViewStyle">@style/BriarTheme.ListSeparatorTextView</item>
@@ -33,6 +63,10 @@
         <item name="android:textColor">@android:color/primary_text_light</item>
     </style>
 
+    <style name="BriarTextTitleInverted" parent="BriarTextTitle">
+        <item name="android:textColor">@android:color/primary_text_dark</item>
+    </style>
+
     <style name="BriarTextBody">
         <item name="android:textSize">@dimen/text_size_small</item>
         <item name="android:textColor">@android:color/primary_text_light</item>
@@ -45,6 +79,17 @@
     <style name="Divider.Horizontal">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1px</item>
+    </style>
+
+    <style name="NavMenuButton" parent="Widget.AppCompat.Button.Borderless.Colored">
+        <item name="android:textSize">@dimen/text_size_medium</item>
+        <item name="android:textColor">@android:color/tertiary_text_light</item>
+        <item name="android:paddingTop">@dimen/margin_large</item>
+        <item name="android:paddingBottom">@dimen/margin_large</item>
+        <item name="android:drawablePadding">@dimen/margin_xlarge</item>
+        <item name="android:gravity">left|center_vertical</item>
+        <item name="android:layout_margin">0dp</item>
+        <item name="android:paddingLeft">@dimen/margin_large</item>
     </style>
 
     <!-- This fixes a UI bug in the support preference library -->
