Offer option to uninstall Briar in a panic event
Due to the nature of how Android app install/uninstall works without
root, this requires manual confirmation after a panic was triggered.

Closes #211

--- a/briar-android/res/xml/panic_preferences.xml
+++ b/briar-android/res/xml/panic_preferences.xml
@@ -24,6 +24,13 @@
 			android:enabled="false"
 			android:defaultValue="false"/>
 
+		<CheckBoxPreference
+			android:key="pref_key_uninstall"
+			android:title="@string/uninstall_setting_title"
+			android:summary="@string/uninstall_setting_summary"
+			android:enabled="false"
+			android:defaultValue="false"/>
+
 	</PreferenceCategory>
 
 </PreferenceScreen>
