--- a/briar-android/res/layout/list_item_msg_in.xml
+++ b/briar-android/res/layout/list_item_msg_in.xml
@@ -1,53 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:orientation="horizontal"
-	android:paddingRight="@dimen/margin_medium"
-	android:paddingEnd="@dimen/margin_medium"
-	android:paddingTop="@dimen/margin_small"
-	android:paddingBottom="@dimen/margin_small">
+	android:orientation="horizontal">
 
 	<de.hdodenhof.circleimageview.CircleImageView
 		android:id="@+id/msgAvatar"
 		android:layout_width="@dimen/listitem_picture_size"
 		android:layout_height="@dimen/listitem_picture_size"
-		android:layout_marginLeft="@dimen/listitem_horizontal_margin"
-		android:layout_marginStart="@dimen/listitem_horizontal_margin"
+		android:layout_marginLeft="@dimen/margin_medium"
+		android:layout_marginStart="@dimen/margin_medium"
+		android:visibility="gone"
+		app:civ_border_color="@color/briar_text_primary"
 		app:civ_border_width="@dimen/avatar_border_width"
-		app:civ_border_color="@color/briar_text_primary"/>
+		tools:src="@drawable/ic_launcher"/>
 
-	<RelativeLayout
+	<LinearLayout
 		android:id="@+id/msgLayout"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_gravity="left|start"
 		android:background="@drawable/msg_in"
-		android:paddingLeft="17dp"
-		android:paddingTop="5dp"
-		android:paddingRight="7dp"
-		android:paddingBottom="5dp">
+		android:orientation="vertical"
+		android:layout_marginLeft="@dimen/message_bubble_margin_tail"
+		android:layout_marginRight="@dimen/message_bubble_margin_non_tail">
 
 		<TextView
 			android:id="@+id/msgBody"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:minWidth="80dp"
 			android:textIsSelectable="true"
+			android:textSize="@dimen/text_size_medium"
 			tools:text="Short message"/>
 
 		<TextView
 			android:id="@+id/msgTime"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:textSize="10sp"
+			android:layout_gravity="right|end"
+			android:layout_marginTop="@dimen/message_bubble_timestamp_margin"
+			android:maxLines="1"
 			android:textColor="@color/private_message_date"
-			android:layout_below="@+id/msgBody"
+			android:textSize="@dimen/text_size_tiny"
 			tools:text="Dec 24, 13:37"/>
 
-	</RelativeLayout>
+	</LinearLayout>
 
 </LinearLayout>
