--- a/briar-android/res/layout/list_item_msg_out.xml
+++ b/briar-android/res/layout/list_item_msg_out.xml
@@ -4,11 +4,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:orientation="vertical"
-	android:paddingLeft="@dimen/margin_medium"
-	android:paddingStart="@dimen/margin_medium"
-	android:paddingTop="@dimen/margin_small"
-	android:paddingBottom="@dimen/margin_small">
+	android:orientation="vertical">
 
 	<RelativeLayout
 		android:id="@+id/msgLayout"
@@ -16,28 +12,29 @@
 		android:layout_height="wrap_content"
 		android:layout_gravity="right|end"
 		android:background="@drawable/msg_out"
-		android:paddingLeft="7dp"
-		android:paddingTop="5dp"
-		android:paddingRight="17dp"
-		android:paddingBottom="5dp">
+		android:layout_marginLeft="@dimen/message_bubble_margin_non_tail"
+		android:layout_marginRight="@dimen/message_bubble_margin_tail">
 
 		<TextView
 			android:id="@+id/msgBody"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:textColor="@color/briar_text_primary_inverse"
 			android:textIsSelectable="true"
-			android:minWidth="80dp"
+			android:textSize="@dimen/text_size_medium"
 			tools:text="This is a long long long message that spans over several lines.\n\nIt ends here."/>
 
 		<TextView
 			android:id="@+id/msgTime"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:layout_marginTop="@dimen/message_bubble_timestamp_margin"
+			android:layout_alignParentLeft="true"
+			android:layout_alignParentStart="true"
 			android:layout_below="@+id/msgBody"
-			android:layout_toLeftOf="@+id/msgStatus"
-			android:textSize="10sp"
-			android:textColor="@color/private_message_date"
 			android:singleLine="true"
+			android:textColor="@color/private_message_date_inverse"
+			android:textSize="@dimen/text_size_tiny"
 			tools:text="Dec 24, 13:37"/>
 
 		<ImageView
@@ -45,10 +42,11 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_alignBottom="@+id/msgTime"
-			android:layout_alignRight="@+id/msgBody"
-			android:layout_alignEnd="@+id/msgBody"
-			android:layout_marginLeft="3dp"
-			tools:src="@drawable/message_delivered"/>
+			android:layout_marginLeft="@dimen/margin_medium"
+			android:layout_toEndOf="@+id/msgTime"
+			android:layout_toRightOf="@+id/msgTime"
+			tools:ignore="ContentDescription"
+			tools:src="@drawable/message_delivered_white"/>
 
 	</RelativeLayout>
 
